--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="clock" id="clock">00:00:00</div>
+    <div class="clock-container">
+        <div class="clock" id="clock">00:00:00</div>
+    </div>
     
     <script>
         function updateClock() {
